# Dijital-iz-Driver-TR

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  diz_run.bat  diz_setup.sh  main.py  pyproject.toml  requirements.txt  setup_env.py
.github/workflows/: ci.yml
core/: __init__.py  ai_analyst.py  analyst_notes.py  context_engine.py  correlation.py  correlator.py  engine.py  masking.py  module_manager.py  reporter.py  utils.py
data/results/: analyst_notebook.json  correlation_results.json  cross_source_alignment.json  hayabusa_output.json  mobile_findings.json  report_section_notes.example.json  test_chainsaw_parse.json  test_hayabusa.csv  test_rapor.csv  test_report.html
data/results/_case_study_test/: cloud_findings.json  hayabusa_output.json
data/results/volatility/: windows_malfind.json  windows_netscan.json  windows_pslist.json
data/supertimeline/: merged_merger_test.csv
modules/: __init__.py  ai_analyst.py  base.py  chainsaw.py  chainsaw_wrapper.py  cloud_wrapper.py  hayabusa.py  hayabusa_module.py  hayabusa_wrapper.py  kape.py  mobile_wrapper.py  network_wrapper.py  volatility.py  volatility_wrapper.py
parsers/: __init__.py  csv_parser.py  json_parser.py  supertimeline.py  timeline_merger.py
templates/: report.html
tests/: case_study_generator.py  test_smoke.py
tests/case_study/: README.md
tests/case_study/artifacts/: network_analysis.json
ui/: __init__.py  app.py  cli.py  dashboard.py  streamlit_app.py
