[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dijital-iz-surucu"
version = "0.2.0"
description = "Dijital İz Sürücü (DİZ) — DFIR: disk, bellek, ağ, bulut ve mobil kanıtları tek SuperTimeline ve Storyline raporda birleştirir."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Recep Şenel (RedzepTech)" }]
keywords = ["dfir", "forensics", "incident-response", "hayabusa", "chainsaw", "streamlit", "mitre"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
requires-python = ">=3.10"
# Ana bağımlılıklar kök requirements.txt ile aynı sürüm alt sınırlarına hizalıdır.
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "python-dateutil>=2.8.2",
  "streamlit>=1.25.0",
  "plotly>=5.15.0",
  "pydeck>=0.8.0",
  "rich>=13.5.0",
  "folium>=0.15.0",
  "streamlit-folium>=0.18.0",
  "networkx>=3.2",
  "jinja2>=3.1.2",
  "pdfkit>=1.0.0",
  "weasyprint>=59.0",
  "boto3>=1.28.0",
  "azure-mgmt-monitor>=5.0.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
  "ollama>=0.3.0",
  "langchain>=0.0.250",
  "volatility3>=2.0.0",
  "tabulate>=0.9.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.3.0",
]

[project.scripts]
dijital-iz-surucu = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "setup_env"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "ui*", "parsers*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  ".github",
  ".venv",
  "venv",
  "data",
  "tests/case_study",
  "templates",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",
  "E402",
  "W293",
]
